# pdf-quiz-maker-backend

./: .gitignore  Dockerfile  Makefile  README.md  TODO.md  compose.yml  main.py  pyproject.toml
api/: education_resource.py  learning_document.py  quiz.py
db/: astradb_utils.py  mongodb_utils.py
pdf_quiz_maker_backend/: main.py
quiz_maker/: astradb_utils.py  data_processing_utils.py  education_resources_sample.json  main.py  models.py  mongodb_utils.py  openai_utils.py  pdf_to_markdown.py  quizzes_sample.json
response/embedding/: 3_small.txt  ada_002.txt
response/json_structured/: sample.txt
schemas/: ai_service.py  education_resource.py  leaning_document.py  quiz.py
services/: education_resource.py  learning_document.py  quiz.py
utils/: data_processing_utils.py  openai_utils.py
