[tool.poetry]
name = "pdf-quiz-maker-backend"
version = "0.1.0"
description = ""
authors = ["KeishiIrisa <keishi.irisa@gmail.com>"]
readme = "README.md"
packages = [{include = "pdf_quiz_maker_backend"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
pymupdf4llm = "^0.0.17"
python-multipart = "^0.0.17"
llama-index = ">=0.12.0,<0.13.0"
openai = "^1.53.0"
python-dotenv = "^1.0.1"
pymongo = {version = "3.11", extras = ["srv"]}
astrapy = ">=1.5,<2.0"
llama-index-vector-stores-astra-db = "^0.4.0"
certifi = "^2024.8.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
